--- a/GrupoEmpresarial-war/web/interfaz/grupo-empresa/itz-informe-grupo-empresa.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/grupo-empresa/itz-informe-grupo-empresa.xhtml
@@ -38,7 +38,7 @@
                                 <p:commandButton value="Formulario" action="/interfaz/grupo-empresa/itz-formulario-grupo-empresa.xhtml" ajax="false"/>
                             </div>
                         </div>
-                        <div class="ui-grid-row">
+                        <!--div class="ui-grid-row">
                             <div class="ui-grid-col-12">
                                 <h4 class="titulo-left-h3">Actualizar información desde archivo XLS</h4>
                                 <p>En esta sección el usuario puede descargar un archivo XLS, que contiene la información del grupo empresarial, la cual podra
@@ -55,7 +55,7 @@
                                    <ui:param name="formulario" value="GRUPO" />
                                </ui:include>
                            </div>
-                        </div>
+                        </div-->
                     </div>
 
                     <p:dialog id="dlgReportePdf" header="Reporte Grupo Empresa" widgetVar="dlg"  appendTo="@(body)"
