--- a/GrupoEmpresarial-war/web/interfaz/grupo-empresa/componente/cpt-formulario-tamano.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/grupo-empresa/componente/cpt-formulario-tamano.xhtml
@@ -10,76 +10,84 @@
 
         <h:panelGrid columns="3">
 
+            <!--
+            <h:outputText value="Información con corte a: " styleClass="etiquetaFormulario"/>
+            <p:inputText styleClass="valorEtiquetaFormulario"/>
+            -->
+
             <h:outputText value="Activo: * $" styleClass="etiquetaFormulario"/>
-            <p:inputText id="txtActivo" value="#{MbFormGrupoEmpresa.tamanoSeleccionado.activo}" styleClass="valorEtiquetaFormulario" label="Activo"
+            <p:inputText id="txtActivo" value="#{MbFormGrupoEmpresa.tamanoSeleccionado.activo}" styleClass="valorEtiquetaFormulario" label="Activo" maxlength="19"
                          required="true" requiredMessage="El Activo es requerido." validatorMessage="Los Activos debe contener valores númericos (0-9). Ej: 7500400" >
                 <f:convertNumber locale="es_CO" minFractionDigits="0" />
             </p:inputText>
-            <p:message for="txtActivo" />
+            <h:panelGrid columns="2" cellpadding="0">
+                <p:message for="txtActivo" />
+                <p:graphicImage id="imgAyudaActivo" value="/resources/icon/icono-de-ayuda.png" />
+                <p:tooltip for="imgAyudaActivo">
+                    <p>Todas las cifras monetarias debe ser diligenciadas en pesos Colombianos.</p>
+                </p:tooltip>
+            </h:panelGrid>
 
             <h:outputText value="Pasivo: * $" styleClass="etiquetaFormulario"/>
-            <p:inputText id="txtPasivo" value="#{MbFormGrupoEmpresa.tamanoSeleccionado.pasivo}" styleClass="valorEtiquetaFormulario" label="Pasivo"
+            <p:inputText id="txtPasivo" value="#{MbFormGrupoEmpresa.tamanoSeleccionado.pasivo}" styleClass="valorEtiquetaFormulario" label="Pasivo"  maxlength="19"
                          required="true" requiredMessage="El Pasivo es requerido." validatorMessage="El Pasivo debe contener valores númericos (0-9). Ej: 7500400" >
                 <f:convertNumber locale="es_CO" minFractionDigits="0" />
             </p:inputText>
             <p:message for="txtPasivo" />
 
             <h:outputText value="Patrimonio: * $" styleClass="etiquetaFormulario"/>
-            <p:inputText id="txtPatrimonio" value="#{MbFormGrupoEmpresa.tamanoSeleccionado.patrimonio}" styleClass="valorEtiquetaFormulario" label="Patrimonio"
+            <p:inputText id="txtPatrimonio" value="#{MbFormGrupoEmpresa.tamanoSeleccionado.patrimonio}" styleClass="valorEtiquetaFormulario" label="Patrimonio"  maxlength="19"
                          required="true" requiredMessage="El Patrimonio es requerido." validatorMessage="El Patrimonio debe contener valores númericos (0-9). Ej: 7500400" >
                 <f:convertNumber locale="es_CO" minFractionDigits="0" />
             </p:inputText>
             <p:message for="txtPatrimonio" />
 
             <h:outputText value="Ingresos operacionales: * $" styleClass="etiquetaFormulario"/>
-            <p:inputText id="txtIngresosOperacionales" value="#{MbFormGrupoEmpresa.tamanoSeleccionado.ingresosOperacionales}" styleClass="valorEtiquetaFormulario" label="Ingresos operacionales"
+            <p:inputText id="txtIngresosOperacionales" value="#{MbFormGrupoEmpresa.tamanoSeleccionado.ingresosOperacionales}" styleClass="valorEtiquetaFormulario" label="Ingresos operacionales"  maxlength="19"
                          required="true" requiredMessage="Los Ingresos operacionales son requeridos." validatorMessage="Los Ingresos Operacionales debe contener valores númericos (0-9). Ej: 7500400">
                 <f:convertNumber locale="es_CO" minFractionDigits="0" />
             </p:inputText>
             <p:message for="txtIngresosOperacionales" />
 
             <h:outputText value="Gastos operacionales: * $" styleClass="etiquetaFormulario"/>
-            <p:inputText id="txtGastosOperacionales" value="#{MbFormGrupoEmpresa.tamanoSeleccionado.gastosOperacionales}" styleClass="valorEtiquetaFormulario" label="Gastos operacionales"
+            <p:inputText id="txtGastosOperacionales" value="#{MbFormGrupoEmpresa.tamanoSeleccionado.gastosOperacionales}" styleClass="valorEtiquetaFormulario" label="Gastos operacionales"  maxlength="19"
                          required="true" requiredMessage="Los Gastos operacionales son requeridos." validatorMessage="Los Gsatos Operacionales debe contener valores númericos (0-9). Ej: 7500400">
                 <f:convertNumber locale="es_CO" minFractionDigits="0" />
             </p:inputText>
             <p:message for="txtGastosOperacionales" />
 
             <h:outputText value="Utilidad neta: * $" styleClass="etiquetaFormulario"/>
-            <p:inputText id="txtUtilidadNeta" value="#{MbFormGrupoEmpresa.tamanoSeleccionado.utilidadNeta}" styleClass="valorEtiquetaFormulario" label="Utilidad neta"
+            <p:inputText id="txtUtilidadNeta" value="#{MbFormGrupoEmpresa.tamanoSeleccionado.utilidadNeta}" styleClass="valorEtiquetaFormulario" label="Utilidad neta"  maxlength="19"
                          required="true" requiredMessage="La Utilidad neta es requerida." validatorMessage="La Utilidad Neta debe contener valores númericos (0-9). Ej: 7500400">
                 <f:convertNumber locale="es_CO" minFractionDigits="0" />
             </p:inputText>
             <p:message for="txtUtilidadNeta" />
 
-            <h:outputText value="EBITDA: *" styleClass="etiquetaFormulario"/>
-            <p:inputText id="txtEbitada" value="#{MbFormGrupoEmpresa.tamanoSeleccionado.ebitda}" styleClass="valorEtiquetaFormulario" label="EBITDA"
-                         required="true" requiredMessage="El EBITDA es requerido." validatorMessage="El EBITDA debe contener valores númericos (0-9). Ej: 2"/>
+            <h:outputText value="EBITDA: * $" styleClass="etiquetaFormulario"/>
+            <p:inputText id="txtEbitada" value="#{MbFormGrupoEmpresa.tamanoSeleccionado.ebitda}" styleClass="valorEtiquetaFormulario" label="EBITDA"  maxlength="19"
+                         required="true" requiredMessage="El EBITDA es requerido." validatorMessage="El EBITDA debe contener valores númericos (0-9). Ej: 7500400">
+                <f:convertNumber locale="es_CO" minFractionDigits="0" />
+            </p:inputText>
             <p:message for="txtEbitada" />
 
             <h:outputText value="Personal ocupado: *" styleClass="etiquetaFormulario"/>
-            <p:inputText id="txtPersonalOcupado" value="#{MbFormGrupoEmpresa.tamanoSeleccionado.personalOcupado}" styleClass="valorEtiquetaFormulario" label="Personal ocupado"
+            <p:inputText id="txtPersonalOcupado" value="#{MbFormGrupoEmpresa.tamanoSeleccionado.personalOcupado}" styleClass="valorEtiquetaFormulario" label="Personal ocupado" maxlength="9"
                          required="true" requiredMessage="El Personal ocupado es requerido." validatorMessage="El Personal Ocupado debe contener valores númericos (0-9). Ej: 100" />
             <p:message for="txtPersonalOcupado" />
 
             <h:outputText value="Número de hombres ocupados: " styleClass="etiquetaFormulario"/>
-            <p:inputText id="txtNumeroHombresOcupados" value="#{MbFormGrupoEmpresa.tamanoSeleccionado.hombresOcupados}" styleClass="valorEtiquetaFormulario" label="Número de hombres ocupados"
-                         required="true" requiredMessage="El Número de hombres ocupados es requerido." validatorMessage="El Número de Hombres Ocupados debe contener valores númericos (0-9). Ej: 100" />
+            <p:inputText id="txtNumeroHombresOcupados" value="#{MbFormGrupoEmpresa.tamanoSeleccionado.hombresOcupados}" styleClass="valorEtiquetaFormulario" label="Número de hombres ocupados" maxlength="9"
+                         required="false" requiredMessage="El Número de hombres ocupados es requerido." validatorMessage="El Número de Hombres Ocupados debe contener valores númericos (0-9). Ej: 100" />
             <p:message for="txtNumeroHombresOcupados" />
 
             <h:outputText value="Número de mujeres ocupadas: " styleClass="etiquetaFormulario"/>
-            <p:inputText id="txtNumeroMujeresOcupadas" value="#{MbFormGrupoEmpresa.tamanoSeleccionado.mujeresOcupadas}" styleClass="valorEtiquetaFormulario" label="Número de mujeres ocupadas"
-                         required="true" requiredMessage="El Número de mujeres ocupadas es requerido." validatorMessage="El Número de Mujeres Ocupadas debe contener valores númericos (0-9). Ej: 100" />
+            <p:inputText id="txtNumeroMujeresOcupadas" value="#{MbFormGrupoEmpresa.tamanoSeleccionado.mujeresOcupadas}" styleClass="valorEtiquetaFormulario" label="Número de mujeres ocupadas" maxlength="9"
+                         required="false" requiredMessage="El Número de mujeres ocupadas es requerido." validatorMessage="El Número de Mujeres Ocupadas debe contener valores númericos (0-9). Ej: 100" />
             <p:message for="txtNumeroMujeresOcupadas" />
 
-            <!--
-            <h:outputText value="Información con corte a: " styleClass="etiquetaFormulario"/>
-            <p:inputText styleClass="valorEtiquetaFormulario"/>
-            -->
+            <h:outputText value="Observaciones: " styleClass="etiquetaFormulario" />
+            <p:inputTextarea value="#{MbFormGrupoEmpresa.tamanoSeleccionado.observaciones}" rows="10" cols="66" label="Observaciones" maxlength="800"/>
 
-            <!--<h:outputText value="Observaciones: " styleClass="etiquetaFormulario" />
-            <p:inputTextarea value="#{MbFormGrupoEmpresa.tamanoSeleccionado.observaciones}" rows="6" cols="66" label="Observaciones"/>
--->
         </h:panelGrid>
     </p:panel>
 
