--- a/GrupoEmpresarial-war/web/interfaz/unidad-legal/itz-formulario-unidad-legal.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/unidad-legal/itz-formulario-unidad-legal.xhtml
@@ -23,10 +23,10 @@
                             <hr class="lineaGradian"/>
                         </p:tab>
 
-                        <p:tab id="historia" title="Información de historia">
+                        <!--p:tab id="historia" title="Información de historia">
                             <ui:include src="componente/cpt-formulario-historia.xhtml"/>
                             <hr class="lineaGradian"/>
-                        </p:tab>
+                        </p:tab-->
 
                         <p:tab id="tamano" title="Información de tamaño">
                             <ui:include src="componente/cpt-formulario-tamano.xhtml"/>
